lebedev/source/graph.hpp

#ifndef _GRAPH_H_
#define _GRAPH_H_

#ifdef  __cplusplus
extern "C" {
#endif

float graph_3_2(
    const float,
    const float);

float graph_3_3(
    const float,
    const float);

float graph_3_4(
    const float,
    const float);

float graph_3_5_1(
    const float,
    const float);
float graph_3_5_2(
    const float,
    const float);
float graph_3_5_3(
    const float,
    const float);
float graph_3_5_4(
    const float,
    const float);
float graph_3_5(
    const float,
    const float,
    const float);

float graph_3_13(
    const float);

float graph_3_21(
    const float,
    const float);

float graph_3_22(
    const float,
    const float);

float graph_3_25(
    const float,
    const float);

float graph_3_28(
    const float,
    const float);

float graph_3_29(
    const float,
    const float);

float graph_3_32(
    const float);

float graph_3_35_1(
    const float);
float graph_3_35_2(
    const float,
    const float);
float graph_3_35(
    const float,
    const float,
    const float);

float graph_4_2(
    const float,
    const float);

float graph_4_3(
    const float,
    const float);

float graph_4_5(
    const float,
    const float);

float graph_4_8(
    const float,
    const float);

float graph_4_9(
    const float,
    const float);

float graph_4_10(
    const float,
    const float);

float graph_4_11(
    const float,
    const float);

float graph_4_12(
    const float,
    const float);

float graph_4_13(
    const float,
    const float);

float graph_4_15(
    const float,
    const float);

float graph_4_24a_1(
    const float,
    const float);
float graph_4_24a_2(
    const float,
    const float);
float graph_4_24a_3(
    const float,
    const float);
float graph_4_24b_1(
    const float,
    const float);
float graph_4_24b_2(
    const float,
    const float);
float graph_4_24b_3(
    const float,
    const float);
float graph_4_24a(
    const float,
    const float,
    const float);
float graph_4_24b(
    const float,
    const float,
    const float);
float graph_4_24(
    const float,
    const float,
    const float,
    const float);

float graph_4_27(
    const float,
    const float);

float graph_4_28(
    const float,
    const float);

float graph_4_29(
    const float);

float graph_4_30_1(
    const float,
    const float,
    const float);
float graph_4_30_2(
    const float,
    const float,
    const float);
float graph_4_30_3(
    const float,
    const float,
    const float);
float graph_4_30_1_1(
    const float,
    const float);
float graph_4_30_2_1(
    const float,
    const float);
float graph_4_30_3_1(
    const float,
    const float);
float graph_4_30(
    const float,
    const float,
    const float,
    const float);

float graph_4_32(
    const float);

float graph_4_34_1(
    const float,
    const float);
float graph_4_34_2(
    const float,
    const float);
float graph_4_34_3(
    const float,
    const float);
float graph_4_34(
    const float,
    const float,
    const float);

float graph_4_35(
    const float,
    const float);

float graph_4_36(
    const float,
    const float);

float graph_4_38(
    const float);

float graph_4_40(
    const float,
    const float);

float graph_4_42(
    const float,
    const float);

float graph_4_43(
    const float,
    const float);

float graph_5_7(
    const float,
    const float);

float graph_5_8(
    const float,
    const float,
    const float);

float graph_5_9(
    const float,
    const float);

float graph_5_11(
    const float,
    const float);

#ifdef  __cplusplus
}
#endif

#endif  /* _GRAPH_H_ */